# smoothernity

./: .hgignore  Author.md  ProjectHome.md  WhatsNew.md  backup.sh  license.txt  mega_refactor.sh  mega_refactor_phase_1.sh  mega_refactor_phase_3.sh  olegus_ios_developer.p12  shy_copy.py  shy_normalize_includes.py  shy_normalize_paths.py  shy_normalizer.py  shy_prefix_to_postfix.py  shy_rel_to_abs.py
data/: fsm.shy  (+1 more)
draft/lua/: CMakeLists.txt  cbullet.cpp  cbullet.h  consts.h  display.c  display.h  frame.h  ibuf.c  ibuf.h  input.c  input.h  machine.c  machine.h  machine_api.c  machine_api_display.c  machine_api_ibuf.c  machine_api_input.c  machine_api_mesh.c  machine_api_space.c  machine_api_text.c  machine_api_tween.c  machine_api_vbuf.c  main.c  matrix.c  matrix.h  mesh.c  mesh.h  mpool.c  mpool.h  physic.cpp  physic.h  physics.h  sandbox.c  sandbox.lua  sandbox.sh  scene.h  script.lua  space.c  space.h  text.c  (+11 more)
draft/lua/core/: CMakeLists.txt  display.c  input.c  mesh.c  vector.c
draft/lua/physics/: physics.cpp
draft/ocl/: CMakeLists.txt  FindOpenCL.cmake  main.c  run.sh
src/core/: CMakeLists.txt  buf.c  buf.h  cbuf.c  cbuf.h  cinput.c  cinput.h  cinterp.c  cinterp.h  clog.c  clog.h  cmain.c  cmatrix.c  cmatrix.h  cmpool.c  cmpool.h  cphysics.c  cphysics.h  cprog.c  cprog.h  crbuf.c  crbuf.h  crender.c  crender.h  cthread.c  cthread.h  ctimer.c  ctimer.h  cutil.c  cutil.h  cvao.c  cvao.h  cvector.c  cvector.h  display.c  display.h  ibuf.c  ibuf.h  input.c  input.h  (+51 more)
src/physics/: CMakeLists.txt  colshape.cpp  colshape.hpp  ddraw.cpp  ddraw.hpp  mstate.cpp  mstate.hpp  physcpp.cpp  physcpp.h  physdbg.cpp  physdbg.h  physics.cpp  physres.h  rigidbody.cpp  rigidbody.hpp  vehicle.cpp  vehicle.hpp  world.cpp  world.hpp  ycolshape.cpp  ycolshape.hpp  yddraw.cpp  yddraw.hpp  ymstate.cpp  ymstate.hpp  yphyscpp.cpp  yphyscpp.h  yphysdbg.cpp  yphysdbg.h  yphysres.h  yrigidbody.cpp  yrigidbody.hpp  yvehicle.cpp  yvehicle.hpp  yworld.cpp  yworld.hpp
src/platform/: CMakeLists.txt  conditions.hpp  math_consts.hpp  math_int_float.hpp  math_int_float_insider.hpp  matrix_float.hpp  matrix_float_insider.hpp  mem.h  mem.hpp  mem_gcc.c  memory.h  mouse.hpp  mouse_dummy.hpp  mouse_insider.hpp  platform.hpp  pmem.h  pmem.hpp  pmem_gcc.c  pointer.hpp  ptimer.h  ptimer_posix.c  ptimer_win.c  render.h  render_posix.c  render_win.c  scheduler_direct_call.hpp  scheduler_random.hpp  shell.h  shell_posix.c  shell_win.c  static_array.hpp  static_array_insider.hpp  static_assert.hpp  timer.h  timer_posix.c  timer_win.c  touch.hpp  touch_dummy.hpp  touch_insider.hpp  vector_float.hpp  (+1 more)
src/platform/conditions/: shy_conditions.h  shy_conditions.hpp  shy_conditions_injections.h  shy_conditions_injections.hpp
src/platform/consts/: shy_consts.h  shy_consts_injections.h
src/platform/consts/insider/: shy_insider.h  shy_insider_injections.h
src/platform/generator/consts/: shy_consts.h  shy_consts.hpp  shy_consts_injections.h  shy_consts_injections.hpp
src/platform/generator/python/: shy_python.h  shy_python.hpp  shy_python_injections.h  shy_python_injections.hpp
src/platform/math/consts/: shy_consts.h  shy_consts.hpp  shy_consts_injections.h  shy_consts_injections.hpp
src/platform/math/int/float/: shy_float.hpp  shy_float_injections.h  shy_float_injections.hpp
src/platform/math/int_float/: shy_int_float.h  shy_int_float.hpp  shy_int_float_injections.h  shy_int_float_injections.hpp
src/platform/math/int_float/insider/: shy_insider.h  shy_insider_injections.h
src/platform/matrix/float/: shy_float.h  shy_float.hpp  shy_float_injections.h  shy_float_injections.hpp
src/platform/matrix/float/insider/: shy_insider.h  shy_insider.hpp  shy_insider_injections.h  (+1 more)
src/platform/mouse/: shy_mouse.h  shy_mouse.hpp  shy_mouse_injections.h  shy_mouse_injections.hpp
src/platform/mouse/insider/: shy_insider.h  shy_insider.hpp  shy_insider_injections.h
src/platform/pointer/: shy_pointer.h  shy_pointer_injections.h
src/platform/pointer/insider/: shy_insider.h  shy_insider_injections.h
src/platform/profile/: shy_profile.h  shy_profile.hpp  shy_profile_injections.h  shy_profile_injections.hpp
src/platform/profile/insider/: shy_insider.h  shy_insider.hpp  shy_insider_injections.h  shy_insider_injections.hpp
src/platform/profiler/: shy_profiler.h
src/platform/profiler/cout/: shy_cout.h
src/platform/profiler/insider/: shy_insider.h
src/platform/render/directx/: shy_directx.h  shy_directx.hpp  shy_directx_injections.h  shy_directx_injections.hpp
src/platform/render/opengl/: shy_opengl.h  shy_opengl.hpp  shy_opengl_injections.h  shy_opengl_injections.hpp
src/platform/scheduler/direct_call/: shy_direct_call_injections.h  shy_direct_call_injections.hpp
src/platform/scheduler/random/: shy_random.h  shy_random.hpp  shy_random_injections.h  shy_random_injections.hpp
src/platform/sound/directx/: shy_directx.h  shy_directx.hpp  shy_directx_injections.h  shy_directx_injections.hpp
src/platform/sound/openal/: shy_openal.h  shy_openal.hpp  shy_openal_injections.h  shy_openal_injections.hpp
src/platform/static/array/: shy_array.h  shy_array_injections.h
src/platform/static/assert/: shy_assert.h  shy_assert_injections.h
src/platform/static_array/: shy_static_array_injections.h
src/platform/static_array/insider/: shy_insider_injections.h
src/platform/static_assert/: shy_static_assert_injections.h
src/platform/touch/: shy_touch.h  shy_touch.hpp  shy_touch_injections.h  shy_touch_injections.hpp
src/platform/touch/insider/: shy_insider.hpp  shy_insider_injections.h  shy_insider_injections.hpp
src/platform/trace/cerr/: shy_cerr.h  shy_cerr.hpp  shy_cerr_injections.h  shy_cerr_injections.hpp
src/platform/trace/consts/: shy_consts.h  shy_consts.hpp  shy_consts_injections.h  shy_consts_injections.hpp
src/platform/trace/insider/: shy_insider.h  shy_insider.hpp  shy_insider_injections.h
src/platform/trace/stub/: shy_stub.h  shy_stub.hpp  shy_stub_injections.h  shy_stub_injections.hpp
src/platform/vector/float/: shy_float.h  shy_float.hpp  shy_float_injections.h  shy_float_injections.hpp
(+10042 files in other folders)
